Update project metadata.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,26 +12,26 @@ readme = "README.md"
 homepage = "https://github.com/eli64s/readme-ai"
 documentation = "https://github.com/eli64s/readme-ai/blob/main/README.md"
 keywords = [
-    "cli",
-    "readme",
-    "devtools",
-    "readme-badges",
-    "openai",
-    "hacktoberfest",
-    "readme-md",
-    "readme-generator",
-    "readme-generation",
-    "coding-assistant",
-    "gpt-3",
-    "openai-api",
-    "automated-readme",
-    "gpt-4",
-    "chatgpt",
-    "openaiapi",
-    "llmops",
-    "gpt-35-turbo",
-    "llm-agent",
-    "openai-api-python"
+  "readme",
+  "devtools",
+  "readme-badges",
+  "openai",
+  "readme-template",
+  "hacktoberfest",
+  "readme-generator",
+  "readme-generation",
+  "coding-assistant",
+  "gpt-3",
+  "openai-api",
+  "automated-readme",
+  "gpt-4",
+  "chatgpt",
+  "openaiapi",
+  "llmops",
+  "gpt-35-turbo",
+  "llm-agent",
+  "openai-api-python",
+  "llm-framework",
 ]
 include = ["readmeai", "readmeai.*"]
 
