--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,20 +4,23 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.4.08"
+version = "0.4.09"
 description = "🚀 Generate beautiful README.md files from the terminal. Powered by OpenAI's GPT LLMs 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/eli64s/readme-ai"
 documentation = "https://github.com/eli64s/readme-ai/blob/main/README.md"
-keywords = [
+keywords =  [
   "readme",
   "devtools",
   "readme-badges",
   "openai",
   "readme-template",
   "hacktoberfest",
+  "shieldsio",
+  "readme-bolierplate",
+  "auto-documentation",
   "readme-generator",
   "readme-generation",
   "coding-assistant",
@@ -26,12 +29,9 @@ keywords = [
   "automated-readme",
   "gpt-4",
   "chatgpt",
-  "openaiapi",
-  "llmops",
+  "openai-python",
   "gpt-35-turbo",
-  "llm-agent",
-  "openai-api-python",
-  "llm-framework",
+  "llm-agent"
 ]
 include = ["readmeai", "readmeai.*"]
 
