--- a/readmeai/settings/config.toml
+++ b/readmeai/settings/config.toml
@@ -16,13 +16,13 @@ name = "readme-ai"
 
 # Paths
 [paths]
-output = "readme-ai.md"
-badge_icons = "data/shields_icons.json"
-skill_icons = "data/skill_icons.json"
 dependency_files = "dependency_files.toml"
 ignore_files = "ignore_files.toml"
 language_names = "language_names.toml"
 language_setup = "language_setup.toml"
+output = "readme-ai.md"
+shieldsio_icons = "data/shieldsio.json"
+square_icons = "data/square.json"
 
 # Prompts
 [prompts]
@@ -60,8 +60,11 @@ slogan = "Conceptualize a catchy and memorable slogan for the GitHub project: {}
 # Markdown Template Code
 [md]
 tables = ""
+
 default = "► INSERT-TEXT"
+
 dropdown = """<details closed><summary>{}</summary>\n\n{}\n\n</details>\n"""
+
 header = """<div align="center">
 <h1 align="center">
 <img src="https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/ec559a9f6bfd399b82bb44393651661b08aaf7ba/icons/folder-markdown-open.svg" width="100" />
@@ -69,21 +72,23 @@ header = """<div align="center">
 <h3>◦ {1}</h3>
 <h3>◦ Developed with the software and tools below.</h3>
 """
+
 badges = """<p align="center">
 {0}
 </p>
-<img src="https://img.shields.io/github/license/{1}?style&color=5D6D7E" alt="GitHub license" />
-<img src="https://img.shields.io/github/last-commit/{1}?style&color=5D6D7E" alt="git-last-commit" />
-<img src="https://img.shields.io/github/commit-activity/m/{1}?style&color=5D6D7E" alt="GitHub commit activity" />
-<img src="https://img.shields.io/github/languages/top/{1}?style&color=5D6D7E" alt="GitHub top language" />
+<img src="https://img.shields.io/github/license/{1}?{2}&color=5D6D7E" alt="GitHub license" />
+<img src="https://img.shields.io/github/last-commit/{1}?{2}&color=5D6D7E" alt="git-last-commit" />
+<img src="https://img.shields.io/github/commit-activity/m/{1}?{2}&color=5D6D7E" alt="GitHub commit activity" />
+<img src="https://img.shields.io/github/languages/top/{1}?{2}&color=5D6D7E" alt="GitHub top language" />
 </div>
 \n---
 """
+
 badges_alt = """
 <div align="center">
     <h1>{}</h1>
     <h3>◦ {}</h3>
-    <h3>◦ Developed with the software and tools below</h3>
+    <h3>◦ Developed with the software and tools below.</h3>
 </div>
 
 <p align="center">
@@ -94,6 +99,9 @@ badges_alt = """
 
 ---
 """
+
+badges_style = "style"
+
 toc = """
 ## 📖 Table of Contents
 - [📖 Table of Contents](#-table-of-contents)
@@ -111,6 +119,7 @@ toc = """
 - [👏 Acknowledgments](#-acknowledgments)
 \n---
 """
+
 intro = """
 \n## 📍 Overview
 \n{}
@@ -123,6 +132,7 @@ tree = """
 \n## 📂 Repository Structure\n
 {}
 """
+
 modules = """
 \n---
 \n## ⚙️ Modules
@@ -152,6 +162,7 @@ Please ensure you have the following dependencies installed on your system:
 ```sh\n{4}\n```
 \n---
 """
+
 ending = """
 \n## 🛣 Roadmap
 
@@ -198,6 +209,7 @@ This project is licensed under the `ℹ️  LICENSE-TYPE` License. See the [LICE
 
 ---
 """
+
 # New Markdown Template Code
 header_png = """[<img src="https://img.icons8.com/?size=512&id=55494&format=png" height="120" align="left">](https://img.icons8.com/?size=512&id=55494&format=png)
 
