--- a/readmeai/settings/ignore_files.toml
+++ b/readmeai/settings/ignore_files.toml
@@ -1,4 +1,4 @@
-# Files to ignore when parsing repository contents.
+# Ignore files and directories
 
 [ignore_files]
 directories = [
@@ -7,6 +7,7 @@ directories = [
     ".eggs",
     ".git",
     ".hg",
+    ".idea",
     ".pytest_cache",
     ".svn",
     ".tox",
@@ -23,127 +24,119 @@ directories = [
     "testing",
     "tools",
     "__pycache__",
-    ".idea",
+    "Examples",
 ]
 extensions = [
-    ".iml",
-    #".lock",
-    ".cache",
-    ".cfg",
-    ".cert",
-    ".class",
-    ".config",
-    ".coverage",
-    ".csv",
-    ".docx",
-    ".egg-info",
-    ".env",
-    ".env.example",
-    ".env.local",
-    ".env.production",
-    ".env.test",
-    ".gif",
-    ".h5",
-    ".ini",
-    ".jpg",
-    ".json",
-    ".jsonl",
-    ".json5",
-    ".key",
-    ".md",
-    ".mp4",
-    ".o",
-    ".p12",
-    ".pdf",
-    ".pem",
-    ".pickle",
-    ".pkl",
-    ".properties",
-    ".pyc",
-    ".pyo",
-    ".sav",
-    ".secret",
-    ".sublime-*",
-    ".sum",
-    ".swp",
-    #".toml",
-    ".tsv",
-    #".txt",
-    ".xml",
-    #".yaml",
-    #".yml",
-    ".zip",
-    ".xlsx",
-    ".xls",
-    ".exe",
-    ".dll",
-    ".bak",
-    ".bakup",
-    ".old",
-    ".tmp",
-    ".png",
-    ".jpeg",
-    ".bmp",
-    ".svg",
-    ".ico",
-    ".webp",
-    ".tiff",
-    ".nsi",
-    ".nsh",
-    ".pub",
-    ".sig",
-    ".gz",
-    ".gitignore",
-    ".icns",
-    ".DS_Store",
-    ".jar",
-    ".pro",
-    ".apk",
-    ".sample",
+    #'apk',
+    #'app',
+    'bak',
+    'bakup',
+    'bmp',
+    'bz2',
+    'cache',
+    'cert',
+    #'cfg',
+    'class',
+    'csv',
+    'dat',
+    'db',
+    'dll',
+    'docx',
+    'dylib',
+    'egg',
+    'env',
+    'env.example',
+    'env.local',
+    'env.production',
+    'env.test',
+    'eot',
+    'exe',
+    'gif',
+    'gitignore',
+    'gz',
+    'h5',
+    'ico',
+    'iml',
+    'ini',
+    'jar',
+    'jpeg',
+    'jpg',
+    #'json',
+    #'json5',
+    #'jsonl',
+    'key',
+    'lockb',
+    'log',
+    'md',
+    'mp3',
+    'mp4',
+    'o',
+    'old',
+    'p',
+    'p12',
+    'pdf',
+    'pem',
+    'pickle',
+    'pkl',
+    'png',
+    'properties',
+    'pyc',
+    'pyd',
+    'pyo',
+    'rkt',
+    'sav',
+    'secret',
+    'so',
+    'svg',
+    'swp',
+    'tar',
+    'tif',
+    'tiff',
+    'tmp',
+    'tsv',
+    'webp',
+    'woff',
+    'woff2',
+    'xls',
+    'xlsx',
+    'xml',
+    'zip',
+    'zst',
 ]
+
 files = [
+    ".babelrc",
+    ".dockerignore",
+    ".dvcignore",
+    ".editorconfig",
+    ".flake8",
     ".git",
+    ".gitattributes",
+    ".gitignore",
+    ".gitkeep",
+    ".gitlab-ci",
+    ".gitmodules",
+    ".npmignore",
+    ".pre-commit-config.yaml",
+    ".prettierrc",
+    ".project-root",
+    ".whitesource",
     "AUTHORS",
     "CHANGELOG",
-    "init.py",
-    "__init__.py",
-    ".babelrc",
-    ".editorconfig",
-    "test_binary",
-    "icon.ico~dev",
-    ".env",
-    ".env.example",
-    ".env.local",
-    ".env.production",
-    ".env.test",
-    ".project-root",
-    ".gitattributes",
-    ".gitkeep",
-    ".gitmodules",
-    ".gitlab-ci.yml",
-    ".dvcignore",
-    ".flake8",
-    ".gitignore",
-    ".npmignore",
-    "appimage",
-    "badges.json",
-    "bundle_dmg",
-    "CHANGELOG",
-    "CODE_OF_CONDUCT.md",
-    "CONTRIBUTING.md",
+    "CODE_OF_CONDUCT",
+    "CONTRIBUTING",
     "LICENSE",
-    "LICENSE-MIT",
     "LICENSE-APACHE",
     "LICENSE_APACHE-2.0",
+    "LICENSE-MIT",
     "MANIFEST",
+    "README",
     "README.md",
-    ".dockerignore",
-    "start",
+    "appimage",
+    "bundle_dmg",
     "gradlew",
-    ".DS_Store",
-    ".gitignore",
-    ".whitesource",
-    ".prettierrc",
-    ".pre-commit-config.yaml",
-    "poetry.lock",
+    "icon.ico~dev",
+    "__init__.py",
+    "start",
+    "test_binary",
 ]
