chore: Update project documentation.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -17,6 +17,7 @@ categories:
     labels:
       - chore
       - maintenance
+      - refactor
   - title: ⛔️ Deprecated
     labels:
       - deprecated
