--- a/readmeai/settings/ignore_files.toml
+++ b/readmeai/settings/ignore_files.toml
@@ -35,7 +35,7 @@ extensions = [
     'bz2',
     'cache',
     'cert',
-    #'cfg',
+    'cfg',
     'class',
     'csv',
     'dat',
@@ -95,6 +95,7 @@ extensions = [
     'tmp',
     'tsv',
     'webp',
+    "whl",
     'woff',
     'woff2',
     'xls',
