--- a/readmeai/settings/config.toml
+++ b/readmeai/settings/config.toml
@@ -2,11 +2,11 @@
 [api]
 endpoint = "https://api.openai.com/v1/chat/completions"
 encoding = "cl100k_base"
-model = "gpt-3.5-turbo"
-rate_limit = 4
+model = "gpt-4-1106-preview"
+rate_limit = 3
 tokens = 669
-tokens_max = 3999
-temperature = 1.05
+tokens_max = 99999
+temperature = 1.0
 
 # CLI Options
 [cli]
