--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.4.054"
-description = "Generate beautiful README.md files from the terminal, powered by AI."
+version = "0.4.055"
+description = "🚀 Generate beautiful README files from the terminal, powered by OpenAI's GPT language models 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
 readme = "README.md"
@@ -48,7 +48,7 @@ tabulate = "^0.9.0"
 tenacity = "^8.2.2"
 tiktoken = "^0.4.0"
 toml = "^0.10.2"
-pydantic = "^1.10.9"
+pydantic = ">=1.10.9,<2.0.0"
 tornado = "^6.3.3"
 asyncio = "^3.4.3"
 aiohttp = "^3.8.5"
