--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.4.055"
+version = "0.4.056"
 description = "🚀 Generate beautiful README files from the terminal, powered by OpenAI's GPT language models 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
@@ -102,13 +102,13 @@ force_grid_wrap = 0
 use_parentheses = true
 
 [tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = "test_*.py"
-addopts = "--strict-markers --disable-pytest-warnings"
+addopts = "-v -ra --strict-markers --disable-pytest-warnings"
 markers = "asyncio: marks tests as asyncio."
+python_files = "test_*.py"
+testpaths = ["tests"]
 
 [tool.coverage.run]
-omit = ["tests/*", "*/__init__.py"]
+omit = ["tests/*", "readmeai/__init__.py", "readmeai/*/__init__.py"]
 
 [tool.flake8]
 max-line-length = 79
