--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -1,4 +1,4 @@
-name: PyPI Publish
+name: PyPI and Conda Publish
 
 on:
   push:
@@ -13,19 +13,39 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Install dependencies
+
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
-        pip install twine
-    - name: Build package
-      run: python -m build
-    - name: Publish package
-      run: python -m twine upload --skip-existing dist/*
+        pip install build twine
+
+    - name: Build and Publish to PyPI
+      run: |
+        python -m build
+        python -m twine upload --skip-existing dist/*
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+
+    - name: Install Conda Build and Anaconda Client
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget
+        wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+        bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
+        export PATH="$HOME/miniconda/bin:$PATH"
+        conda install -y conda-build
+        conda install -y anaconda-client
+
+    - name: Build Conda package
+      run: conda-build .
+
+    - name: Upload Conda package
+      run: anaconda upload --user [YourAnacondaUsername] $HOME/miniconda/conda-bld/[platform]/[package-name]-[version].tar.bz2
+      env:
+        ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
