--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -1,4 +1,4 @@
-name: PyPI and Conda Publish
+name: Publish Python Package to PyPI and Conda
 
 on:
   push:
@@ -19,33 +19,35 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install Python dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build twine
+        pip install build
+        pip install twine
+        pip install anaconda-client
 
-    - name: Build and Publish to PyPI
-      run: |
-        python -m build
-        python -m twine upload --skip-existing dist/*
+    - name: Build package
+      run: python -m build
+
+    - name: Publish package to PyPI
+      run: python -m twine upload --skip-existing dist/*
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
 
-    - name: Install Conda Build and Anaconda Client
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y wget
-        wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-        bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
-        export PATH="$HOME/miniconda/bin:$PATH"
-        conda install -y conda-build
-        conda install -y anaconda-client
+    # Additional steps for Conda
+    - name: Install Conda Build
+      run: conda install conda-build
 
     - name: Build Conda package
-      run: conda-build .
+      run: conda build .
 
-    - name: Upload Conda package
-      run: anaconda upload --user [YourAnacondaUsername] $HOME/miniconda/conda-bld/[platform]/[package-name]-[version].tar.bz2
+    - name: Convert Conda package for other platforms (optional)
+      run: |
+        conda convert --platform all $HOME/miniconda/conda-bld/linux-64/*.tar.bz2 -o $HOME/miniconda/conda-bld/
+
+    - name: Publish package to Anaconda
+      run: |
+        anaconda upload $HOME/miniconda/conda-bld/*/*.tar.bz2
       env:
         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
