--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -1,4 +1,4 @@
-name: Publish Python Package to PyPI and Conda
+name: Publish Python Package to PyPI
 
 on:
   push:
@@ -13,41 +13,19 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
-
+        python-version: '3.x'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build
         pip install twine
-        pip install anaconda-client
-
     - name: Build package
       run: python -m build
-
-    - name: Publish package to PyPI
+    - name: Publish package
       run: python -m twine upload --skip-existing dist/*
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-
-    # Additional steps for Conda
-    - name: Install Conda Build
-      run: conda install conda-build
-
-    - name: Build Conda package
-      run: conda build .
-
-    - name: Convert Conda package for other platforms (optional)
-      run: |
-        conda convert --platform all $HOME/miniconda/conda-bld/linux-64/*.tar.bz2 -o $HOME/miniconda/conda-bld/
-
-    - name: Publish package to Anaconda
-      run: |
-        anaconda upload $HOME/miniconda/conda-bld/*/*.tar.bz2
-      env:
-        ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
